# ai-bom

./: .ai-bom-policy.yml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  index.html  objects.inv  pyproject.toml  sitemap.xml  trusera_angel_qa.docx  trusera_business_plan.docx
.github/: CODEOWNERS
.github/workflows/: ai-bom-example.yml  ci.yml  docker.yml  docs.yml  dogfood.yml  publish-npm.yml  publish-vscode.yml  publish.yml
api/: index.html
changelog/: index.html
ci-integration/: index.html
cli-reference/: index.html
compliance/eu-ai-act/: index.html
compliance/owasp/: index.html
configuration/: index.html
credentials/: TruseraApi.credentials.ts
docs/: ci-integration.md  interceptor-sdks.md
docs/scanners/: n8n.md
installation/: index.html
interceptor-sdks/: index.html
n8n-node/: LICENSE  README.md  index.ts  jest.config.js  n8n-nodes-trusera-0.1.0.tgz  package-lock.json  package.json  tsconfig.json
n8n-node/__tests__/: policyEngine.test.ts  remediationMap.test.ts  riskScorer.test.ts  scanner.test.ts
n8n-node/__tests__/fixtures/: sampleWorkflow.json
n8n-node/lib/: config.ts  dashboardHtml.ts  models.ts  policyEngine.ts  riskScorer.ts  scanner.ts
n8n-node/nodes/TruseraDashboard/: TruseraDashboard.node.ts
n8n-node/nodes/TruseraPolicy/: TruseraPolicy.node.json  TruseraPolicy.node.ts
n8n-node/nodes/TruseraReport/: TruseraReport.node.json  TruseraReport.node.ts
n8n-node/nodes/TruseraScan/: TruseraScan.node.json  TruseraScan.node.ts
n8n-node/nodes/TruseraWebhook/: TruseraWebhook.node.ts
outputs/: index.html
policy/: index.html
quickstart/: index.html
scanners/: index.html
scanners/n8n/: index.html
scripts/: cedar-gate.py
search/: search_index.json
src/ai_bom/: __init__.py  cli.py  config.py  models.py  policy.py
src/ai_bom/dashboard/: __init__.py  api.py  db.py  frontend.py
src/ai_bom/detectors/: llm_patterns.py
src/ai_bom/integrations/: n8n_api.py
src/ai_bom/reporters/: __init__.py  cli_reporter.py  junit_reporter.py  sarif.py  spdx3.py
src/ai_bom/scanners/: __init__.py  ast_scanner.py  aws_live_scanner.py  azure_live_scanner.py  base.py  code_scanner.py  docker_scanner.py  gcp_live_scanner.py  n8n_scanner.py  network_scanner.py
templates/: gitlab-ci-ai-bom.yml
tests/: test_cli.py  test_detection_enhanced.py  test_policy.py
tests/test_dashboard/: test_api.py  test_db.py
tests/test_integrations/: test_n8n_api.py
tests/test_reporters/: test_reporters.py  test_spdx3.py
tests/test_scanners/: test_cloud_live_scanners.py
troubleshooting/: index.html
trusera-agent-sdk/: pyproject.toml
trusera-sdk-go/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION.md  go.mod
trusera-sdk-go/examples/basic/: main.go
trusera-sdk-go/examples/block-mode/: main.go
trusera-sdk-go/examples/http-interceptor/: main.go
trusera-sdk-js/: package.json
vscode-extension/: .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  EXTENSION_SUMMARY.md  GETTING_STARTED.md  LICENSE  PROJECT_OVERVIEW.md  README.md  TEST_CHECKLIST.md  ai-bom-scanner-0.1.0.vsix  package-lock.json  package.json  setup.sh  tsconfig.json  vsc-extension-quickstart.md
vscode-extension/images/: icon-placeholder.txt
vscode-extension/src/: decorations.ts  diagnostics.ts  extension.ts  resultProvider.ts  scanner.ts  types.ts
